Fixed meme container layout issue with CSS
Fixed meme container layout issue with CSS

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -71,8 +71,6 @@ h1, h2 {
 
 .meme-container > div {
   position: relative;
-  margin: auto;
-  float: left;
   background-image: url('https://via.placeholder.com/500/000000/FFFFFF/?text=Delete?');
   margin-bottom: 20px;
   
